# ibus-sogoupycc

./: Configuration.md  ConfigurationExample.md  Doublepinyin.md  Downloads.md  FAQ.md  Install.md  ProjectHome.md  Substituted.md  Tutorial.md  WhatsNew.md
demo/: ibus-sogoupycc-demo.mpeg  ibus-sogoupycc-slow-network-demo.mpeg
ibus-sogoupycc/trunk/: Makefile  doublepinyin_scheme.h  engine.c  main.c  sogoupycc.c
linux/: CMakeLists.txt  Makefile  build.sh  config  config.lua  doublepinyin_scheme.c  engine.h  fetcher  note.txt  sgccget.sh  sogoupycc.h  sogoupycc.xml.template
linux/icons/: CMakeLists.txt
linux/src/: CMakeLists.txt  Configuration.cpp  Configuration.h  DoublePinyinScheme.cpp  DoublePinyinScheme.h  LuaBinding.cpp  LuaBinding.h  LuaIbusBinding.cpp  LuaIbusBinding.h  PinyinCloudClient.cpp  PinyinCloudClient.h  PinyinDatabase.cpp  PinyinDatabase.h  PinyinSequence.cpp  PinyinSequence.h  PinyinUtility.cpp  PinyinUtility.h  XUtility.cpp  XUtility.h  defines.cpp  defines.h  engine.cpp  engine.h  gb2312List.txt  main.cpp
startup/: autoload.lua
