CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

IF(NOT DEFINED SHARE_INSTALL_PREFIX)
  SET(PKGDATADIR "${CMAKE_INSTALL_PREFIX}/share/ibus-sogoupycc")
ELSE()
  SET(PKGDATADIR "${SHARE_INSTALL_PREFIX}/ibus-sogoupycc")
ENDIF()

INSTALL(FILES ibus-sogoupycc.png DESTINATION ${PKGDATADIR}/icons)
INSTALL(FILES engmode-on.png DESTINATION ${PKGDATADIR}/icons)
INSTALL(FILES engmode-off.png DESTINATION ${PKGDATADIR}/icons)
INSTALL(FILES requesting.png DESTINATION ${PKGDATADIR}/icons)
INSTALL(FILES menu.png DESTINATION ${PKGDATADIR}/icons)
INSTALL(FILES idle.png DESTINATION ${PKGDATADIR}/icons)
