CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

IF(NOT DEFINED SHARE_INSTALL_PREFIX)
  SET(PKGDATADIR "${CMAKE_INSTALL_PREFIX}/share/ibus-sogoupycc")
ELSE()
  SET(PKGDATADIR "${SHARE_INSTALL_PREFIX}/ibus-sogoupycc")
ENDIF()

ADD_EXECUTABLE(ibus-sogoupycc PinyinUtility.cpp;LuaBinding.cpp;PinyinCloudClient.cpp;engine.cpp;XUtility.cpp;main.cpp)

FIND_PACKAGE(PkgConfig)
PKG_CHECK_MODULES(REQPKGS ibus-1.0>=1.2.0 lua>=5.1 glib-2.0>=2.22.3 gthread-2.0>=2.22.3 dbus-1>=1.2.16 xmu>=1.0)

SET_SOURCE_FILES_PROPERTIES(${SRCS} COMPILE_FLAGS "-pthread -DPKGDATADIR=${PKGDATADIR}")

MESSAGE(STATUS "REQPKGS_INCLUDE_DIRS: "  ${REQPKGS_INCLUDE_DIRS})
MESSAGE(STATUS "REQPKGS_LIBRARIES: "  ${REQPKGS_LIBRARIES})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_DIR};${REQPKGS_INCLUDE_DIRS})
LINK_DIRECTORIES(${REQPKGS_LIBRARY_DIRS})
TARGET_LINK_LIBRARIES(ibus-sogoupycc ${REQPKGS_LIBRARIES})

INSTALL(TARGETS ibus-sogoupycc DESTINATION ${PKGDATADIR}/engine)
